--- a/src/css/UserCreate.css
+++ b/src/css/UserCreate.css
@@ -2,6 +2,16 @@
   text-align: center;
 }
 
+.UserCreate-form {
+  text-align: center;
+}
+
+
+.UserCreate-input {
+  display: block;
+  margin: auto;
+}
+
 .UserCreate-header {
   background-color: #222;
   height: 150px;
