build wireframe for trip create form

--- a/src/css/TripCreate.css
+++ b/src/css/TripCreate.css
@@ -1,8 +1,8 @@
-.UserCreate {
+.TripCreate {
   text-align: center;
 }
 
-.UserCreate-header {
+.TripCreate-header {
   background-color: #222;
   height: 150px;
   padding: 20px;
