--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,11 +1,10 @@
-.UserCreate {
+.App {
   text-align: center;
 }
 
-.UserCreate-header {
+.App-header {
   background-color: #222;
   height: 150px;
   padding: 20px;
   color: white;
-  font-size: 3em;
 }
