add padding and alignment to memorycreate form

--- a/src/css/MemoryCreate.css
+++ b/src/css/MemoryCreate.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+div.MemoryCreate > div {
+  margin: auto;
+  margin-bottom: 10px;
+}
+
 .MemoryCreate-header {
   background-color: #222;
   height: 150px;
