--- a/src/css/TripMap.css
+++ b/src/css/TripMap.css
@@ -23,3 +23,11 @@ div.memory-controls > div {
 .pan-button {
 	box-shadow: 0 1px 5px rgba(0,0,0,0.65);
 }
+
+.newMemoryButton {
+  margin-left: 44%;
+  margin-top: 20px;
+  width: 150px;
+  height: 60px;
+  border-radius: 4px;
+}
