--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,6 +2,9 @@
 	font-family: 'Roboto', sans-serif;
 }
 
+input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0px 100px white inset;
+}
 
 body {
   margin: 0;
