--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,15 +1,24 @@
-* {
-	font-family: 'Roboto', sans-serif;
+html, body { 
+  height: 100%;
+}
+
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
 }
 
 input:-webkit-autofill {
-    -webkit-box-shadow: 0 0 0px 100px white inset;
+  -webkit-box-shadow: 0 0 0px 100px white inset;
 }
 
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 .header {
