--- a/src/css/TripMap.css
+++ b/src/css/TripMap.css
@@ -1,9 +1,9 @@
 .leaflet-container {
 	height: 600px;
 	max-width: 600px;
-	width: 100%;
+	width: 90%;
 	margin: auto;
-	border: black 3px solid; 
+	border: black 3px solid;
 }
 
 .memory-image {
@@ -20,18 +20,16 @@ div.memory-controls > div {
 	background-color: transparent;
 }
 
-
 .pan-button {
 	box-shadow: 0 1px 5px rgba(0,0,0,0.65);
 }
 
-.newMemoryButton {
-  margin-left: 44%;
-  margin-top: 20px;
-}
-
-/*a {
-	margin-top: 10px;
+.newMemoryButtonContainer {
 	display: block;
 	text-align: center;
-}*/
+	margin-bottom: 10px;
+}
+
+.newMemoryButton {
+  margin-top: 15px;
+}
