wire up image form and memroy create components to fire off snackbox. also, style image form

--- a/src/css/MemoryCreate.css
+++ b/src/css/MemoryCreate.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+.ImageFormWrapper > div {
+	margin: auto;
+}
+
 div.MemoryCreate > div {
   margin: auto;
   margin-bottom: 10px;
