--- a/src/css/TripCreateForm.css
+++ b/src/css/TripCreateForm.css
@@ -1,9 +1,16 @@
 .TripCreateForm-form {
   text-align: center;
   border: 3px black solid;
+  max-width: 325px;
+  margin: auto;
 }
 
 .TripCreateForm-input {
   display: block;
   margin: auto;
+}
+
+.submit-button {
+	margin-top: 15px;
+	margin-bottom: 10px;
 }
