change p tags to h3, workaround weird input formatting

--- a/src/css/MemoryCreateForm.css
+++ b/src/css/MemoryCreateForm.css
@@ -5,12 +5,11 @@
   margin: 30px auto;
 }
 
-.MemoryCreateForm-input {
-  display: block;
-  margin: auto;
-}
-
 .submit-button {
 	margin-top: 15px;
 	margin-bottom: 10px;
+}
+
+.comments {
+	margin-top: -20px;
 }
