--- a/src/css/TripCreateForm.css
+++ b/src/css/TripCreateForm.css
@@ -5,12 +5,11 @@
   margin: auto;
 }
 
-.TripCreateForm-input {
-  display: block;
-  margin: auto;
-}
-
 .submit-button {
 	margin-top: 15px;
 	margin-bottom: 10px;
+}
+
+.endDate {
+	margin-top: -15px;
 }
