--- a/src/css/ImageForm.css
+++ b/src/css/ImageForm.css
@@ -10,7 +10,7 @@
   border-color: rgb(102, 102, 102);
   border-style: dashed;
   border-radius: 5px;
-  background: #afadad;
+  background: #d4d4d4;
 }
 
 .drop-zone > div {
