--- a/src/css/MemoryCreateForm.css
+++ b/src/css/MemoryCreateForm.css
@@ -1,6 +1,7 @@
 .MemoryCreateForm-form {
   text-align: center;
-  border: 3px black solid;
+  border: 3px #cccccc solid;
+  border-radius: 5px;
   max-width: 325px;
   margin: 30px auto;
 }
