--- a/src/css/TripCreateForm.css
+++ b/src/css/TripCreateForm.css
@@ -1,6 +1,7 @@
 .TripCreateForm-form {
   text-align: center;
-  border: 3px black solid;
+  border: 3px #cccccc solid;
+  border-radius: 5px;
   max-width: 325px;
   margin: auto;
 }
