glue footer to bottom of page

--- a/src/css/LandingPage.css
+++ b/src/css/LandingPage.css
@@ -31,7 +31,9 @@
 
 footer {
 	background-color: rgb(33,33,33);
-	margin-top: 35px;
+	position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 
 footer > p {
