--- a/src/css/LandingPage.css
+++ b/src/css/LandingPage.css
@@ -31,10 +31,9 @@
 
 footer {
 	background-color: rgb(33,33,33);
-	position: absolute;
   bottom: 0;
   width: 100%;
-  height: 55px;
+  height: auto;
 }
 
 footer > p {
